# docs/swagger.json
@@ -138,6 +138,14 @@
         },
         "/buckets": {
             "post": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Create a new bucket with the given key and owner client ID",
                 "consumes": [
                     "application/json"
@@ -173,6 +181,18 @@
                             "$ref": "#/definitions/main.APIError"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -184,6 +204,14 @@
         },
         "/buckets/{bucket_key}": {
             "get": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Get a bucket by its unique key",
                 "produces": [
                     "application/json"
@@ -208,6 +236,18 @@
                             "$ref": "#/definitions/bucket.Bucket"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -223,6 +263,14 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Update a bucket's key and/or owner ID by its unique key",
                 "consumes": [
                     "application/json"
@@ -265,6 +313,18 @@
                             "$ref": "#/definitions/main.APIError"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -280,6 +340,14 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Delete a bucket by its unique key",
                 "produces": [
                     "application/json"
@@ -307,6 +375,18 @@
                             "$ref": "#/definitions/main.APIError"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -318,6 +398,14 @@
         },
         "/buckets/{bucket_key}/objects": {
             "get": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Get a list of all objects inside the specified bucket",
                 "produces": [
                     "application/json"
@@ -351,6 +439,18 @@
                             "$ref": "#/definitions/main.APIError"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -360,6 +460,14 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Upload a file to a specific bucket. The bucket key is passed in the URL path. The file should be sent as multipart/form-data. An optional object key and content-type can be supplied.",
                 "consumes": [
                     "multipart/form-data"
@@ -408,6 +516,18 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/main.APIError"
                         }
@@ -603,6 +723,14 @@
         },
         "/objects/{key}": {
             "get": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Retrieve the raw payload of an object by its unique object key. Supports content disposition customization via query parameters.",
                 "produces": [
                     "application/octet-stream"
@@ -633,6 +761,18 @@
                             "type": "file"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -648,6 +788,14 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Delete an object's metadata and its physical storage by object key",
                 "produces": [
                     "application/json"
@@ -675,6 +823,18 @@
                             "$ref": "#/definitions/main.APIError"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -686,6 +846,14 @@
         },
         "/objects/{key}/metadata": {
             "get": {
+                "security": [
+                    {
+                        "AccessKey": []
+                    },
+                    {
+                        "SecretKey": []
+                    }
+                ],
                 "description": "Get metadata of an object by its unique object key",
                 "produces": [
                     "application/json"
@@ -708,6 +876,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/object.Object"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIError"
                         }
                     },
                     "404": {
@@ -867,6 +1047,20 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "AccessKey": {
+            "description": "Client Access Key",
+            "type": "apiKey",
+            "name": "X-Cistern-Access-Key",
+            "in": "header"
+        },
+        "SecretKey": {
+            "description": "Client Secret Key",
+            "type": "apiKey",
+            "name": "X-Cistern-Secret-Key",
+            "in": "header"
         }
     }
 }
